2022-02-28  Jonathan Bedard  <jbedard@apple.com>

        [Python 3] Delete old pywebsocket
        https://bugs.webkit.org/show_bug.cgi?id=237274
        <rdar://problem/89558809>

        Rubber-stamped by Aakash Jain.

        * web-platform-tests/tools/pywebsocket: Removed.

2022-03-01  Antoine Quint  <graouts@webkit.org>

        [web-animations] web-animations/interfaces/Animatable/getAnimations-iframe.html is a unique failure
        https://bugs.webkit.org/show_bug.cgi?id=237314

        Reviewed by Antti Koivisto.

        Add a new test to check that both Document.getAnimations() and Element.getAnimations() correctly
        update layout on the owner document.

        * web-platform-tests/web-animations/interfaces/Animatable/getAnimations-iframe-expected.txt:
        * web-platform-tests/web-animations/interfaces/Animatable/getAnimations-iframe.html:

2022-03-01  Ziran Sun  <zsun@igalia.com>

        [Selection] Selection Range should be clamped by the current value length
        https://bugs.webkit.org/show_bug.cgi?id=237210

        Reviewed by  Darin Adler.

        Update the test expectations as some sub-tests are now passing.
        * web-platform-tests/html/semantics/forms/textfieldselection/selection-start-end-expected.txt:

2022-02-28  Antoine Quint  <graouts@webkit.org>

        [web-animations] web-animations/interfaces/Animatable/getAnimations.html is a unique failure
        https://bugs.webkit.org/show_bug.cgi?id=237271

        Reviewed by Dean Jackson.

        * web-platform-tests/web-animations/interfaces/Animatable/getAnimations-expected.txt:

2022-02-28  Antoine Quint  <graouts@webkit.org>

        [web-animations] web-animations/interfaces/KeyframeEffect/processing-a-keyframes-argument-001.html is a unique failure
        https://bugs.webkit.org/show_bug.cgi?id=237259

        Reviewed by Dean Jackson.

        * web-platform-tests/web-animations/interfaces/KeyframeEffect/processing-a-keyframes-argument-001-expected.txt:
